cambio de nombre de la carpeta de nuevo a ccs_f

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Edu+TAS+Beginner&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <link rel="icon" href="imagenes/icono/info.ico">
-    <link rel="stylesheet" href="./css/estilos.css" type="text/css" />
+    <link rel="stylesheet" href="./css_f/estilos.css" type="text/css" />
 </head>
 
 <body>
